--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -4,20 +4,26 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border no-shadow >
 
   <ion-navbar>
     <ion-title>Aide</ion-title>
+    <ion-buttons end>
+        <button ion-button="ion-button" (click)="dismiss()" icon-left>
+            <ion-icon name="md-close" color="danger" showwhen="android,windows,core"></ion-icon> 
+            Fermer
+        </button>
+    </ion-buttons> 
   </ion-navbar>
 
 </ion-header>
-<ion-content padding>
+<ion-content >
   <ion-grid  style="height: 100%;justify-content: center;" [hidden]="text" >
     <ion-row justify-content-center align-items-center>
        <ion-spinner  name="ios"></ion-spinner>
     </ion-row>
   </ion-grid>
-  <div [inerHtml]="text" [hidden]="!text">
+  <div [innerHtml]="text" [hidden]="!text" padding>
 
   </div>
 </ion-content>
