--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs #myTabs>
-  <ion-tab [root]="tab2Root" tabTitle="Clients" tabIcon="md-clipboard"></ion-tab>
-  <ion-tab [root]="tab1Root" tabTitle="Commendes" tabIcon="md-build"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Statistiques" tabIcon="md-analytics"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Accueil" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Ventes" tabIcon="ios-stats-outline"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Donnees" tabIcon="ios-folder-open"></ion-tab>
 </ion-tabs>
