--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-header no-border no-shadow >
 
   <ion-navbar>
-    <ion-title>about</ion-title>
+    <ion-title>A Propos</ion-title>
+    <ion-buttons end>
+        <button ion-button="ion-button" (click)="dismiss()" icon-left>
+            <ion-icon name="md-close" color="danger" showwhen="android,windows,core"></ion-icon> 
+            Fermer
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
+<ion-content >
+  <ion-grid  style="height: 100%;justify-content: center;" [hidden]="text" >
+    <ion-row justify-content-center align-items-center>
+       <ion-spinner  name="ios"></ion-spinner>
+    </ion-row>
+  </ion-grid>
+  <div [innerHtml]="text" [hidden]="!text" padding>
 
-
-<ion-content padding>
-
+  </div>
 </ion-content>
