--- a/src/pages/commendes/commendes.html
+++ b/src/pages/commendes/commendes.html
@@ -1,10 +1,13 @@
-<ion-header>
+<ion-header  no-border no-shadow>
   <ion-navbar>
     <ion-title>Factures</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="loadRemoteData()">
         <ion-icon name="refresh"></ion-icon>
       </button>
+      <button ion-button icon-only (click)="presentPopover($event)">
+          <ion-icon name="more"></ion-icon>
+        </button>       
     </ion-buttons>    
   </ion-navbar>
 </ion-header>
@@ -15,4 +18,7 @@
     <p>{{TotalQuantity(commende)}} souscriptions</p>
   </ion-item>
 </ion-list>
+<ion-fab right bottom>
+  <button ion-fab color="primary" (click)="add()"><ion-icon name="add" ></ion-icon></button>
+</ion-fab>
 </ion-content>
