--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,24 +1,23 @@
-<ion-header>
+<ion-header  no-border no-shadow>
   <ion-navbar>
     <button menuToggle ion-button icon-only>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>les clients</ion-title>
+    <ion-title>Accueil</ion-title>
     <ion-buttons end>
-
       <button ion-button icon-only (click)="loadRemoteData()">
         <ion-icon name="refresh"></ion-icon>
       </button>
-      <button ion-button icon-only (click)="add()">
-          <ion-icon name="add"></ion-icon>
+      <button ion-button icon-only (click)="presentPopover($event)">
+          <ion-icon name="more"></ion-icon>
         </button>       
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content>
-  <ion-searchbar color="primary" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
+  <ion-searchbar [hidden]="!pointVentes.length" color="primary" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
   </ion-searchbar>
-  <ion-list>
+  <ion-list [hidden]="!pointVentes.length">
     <ion-item *ngFor="let pointVente of pointVentes" (click)="showCommende(pointVente)" [hidden]="pointVente.hide">
       <h2>{{pointVente.nom}}</h2>
       <h3>{{pointVente.telephone}}</h3>
