--- a/src/pages/produit/produit.html
+++ b/src/pages/produit/produit.html
@@ -1,32 +1,43 @@
-
-<ion-header>
-
+<ion-header no-border no-shadow >
   <ion-navbar>
-    <ion-title>produit</ion-title>
+        <ion-title><span *ngIf="!produit.nom">Nouveau Produit</span><span *ngIf="produit.nom">{{produit.nom}}</span></ion-title>
+        <ion-buttons end>
+                <button ion-button="ion-button" (click)="dismiss()" icon-left>
+                    <ion-icon name="md-close" color="danger" showwhen="android,windows,core"></ion-icon> 
+                    Fermer
+                </button>
+            </ion-buttons>        
   </ion-navbar>
 </ion-header>
 <ion-content padding>
     <form #form="ngForm" novalidate="novalidate">
         <ion-list>
             <ion-item>
-                <ion-label color="primary" floating><span>Nom </span> </ion-label>
+                <ion-label color="primary" floating><span>Nom du produit </span> </ion-label>
                 <ion-input [(ngModel)]="produit.nom" name="nom" type="text" placeholder="" #nom="ngModel"></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-textarea rows="1" [(ngModel)]="produit.description" placeholder="Description ddu produit"
-                    name="description" #description="ngModel"></ion-textarea>
             </ion-item>
             <ion-item>
                 <ion-label color="primary"><span>Prix de vente </span> </ion-label>
                 <ion-input [(ngModel)]="produit.cout" name="cout" type="number" placeholder="" #nom="ngModel"></ion-input>
-            </ion-item>            
+            </ion-item>  
+            <ion-item>
+                    <ion-textarea rows="1" [(ngModel)]="produit.description" placeholder="Description ddu produit"
+                        name="description" #description="ngModel"></ion-textarea>
+              </ion-item>                      
         </ion-list>
         <div padding="padding">
             <button ion-button block icon-right [disabled]="isInvalid()" (click)="onSubmit()">
-                <span>Enrégistrer
+                    <span *ngIf="!produit.id">Creer un produit</span>
+                    <span *ngIf="produit.id">Enregistrer les changements</span>
                     <ion-icon name="md-done-all"></ion-icon>
-                </span>
+               
             </button>
+             <br>
+            <button *ngIf="produit.id" ion-button outline block icon-right color="danger" (click)="deleteItem()">
+                    <span>Supprimer ce produit
+                        <ion-icon name="close"></ion-icon>
+                    </span>
+               </button>              
         </div>
     </form>
 </ion-content>
