--- a/src/pages/commendes-view/commendes-view.html
+++ b/src/pages/commendes-view/commendes-view.html
@@ -1,38 +1,79 @@
 <ion-header>
   <ion-navbar>
-      <ion-title *ngIf="getPointVente(commende)">{{getPointVente(commende).nom}} - {{commende.date|date:'dd/MM/yyyy' }}</ion-title>
-      <ion-buttons end>
-      <button ion-button icon-only (click)="save()" *ngIf="commende&&.lignes.length">
-        <ion-icon name="save"></ion-icon>
-        <button>
-    </ion-buttons> 
+      <ion-title >
+         <span *ngIf="!commende.numFacture">Enregistrer une vente </span>
+         <span *ngIf="commende.numFacture">Vente - #{{commende.numFacture}}</span>
+        </ion-title>
+      <ion-buttons   end  *ngIf="commende.lignes&&commende.lignes.length" [hidden]="commende.terminated">
+        <button ion-button [hidden]="editing" small outline  icon-left (click)="toggleEditing()">
+          <ion-icon name="trash" color="danger"></ion-icon>
+          Modifier
+      </button>  
+        <button ion-button [hidden]="!editing" small outline  icon-left (click)="toggleEditing()" >
+            <ion-icon name="close" color="primary" ></ion-icon>
+            Annuler
+        </button>    
+    </ion-buttons>    
   </ion-navbar>
 </ion-header>
 <ion-content>
-    <ion-list>
-        <ion-item-sliding *ngFor="let ligne for commende.lignes">
-        <ion-item>
-            {{getProduit(ligne).nom}}
-            <p>{{getProduit(ligne).description}}</p>
-            <ion-note item-left>{{ligne.quantite}}</ion-note>
-        </ion-item>
-        <ion-item-options side="left">
-            <button ion-button color="danger" (click)="removeFromCart(ligne)">
-              <ion-icon name="trash"></ion-icon>
+  <ion-list>
+    <ion-card *ngIf="pointVente">
+        <ion-card-header>{{pointVente.nom}}</ion-card-header>
+        <ion-card-content>
+          <ion-grid>
+          <ion-row><ion-col><strong>Ref-#{{commende.numFacture}}</strong></ion-col>
+            <ion-col *ngIf="commende.date" text-right>{{commende.date|date:'dd/MM/yyyy' }}</ion-col></ion-row>
+          <ion-row *ngIf="commende.user"><ion-col>{{commende.user.nom}}</ion-col></ion-row>
+         </ion-grid>
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngIf="commende.lignes">
+          <ion-row><ion-col>{{commende.lignes.length}} articles</ion-col><ion-col text-right>Total: {{commende.total}} FCFA</ion-col></ion-row>
+        </ion-card> 
+        <ion-list-header no-lines no-border *ngIf="commende.lignes" [hidden]="commende.terminated">
+            Cliquer pour ajouter un produit
+            <button item-end ion-button large icon-only clear (click)="addItem()">
+              <ion-icon color="primary" name="add-circle"></ion-icon>
             </button>
-        </ion-item-options>        
-       </ion-item-sliding>
-    </ion-list>
+        </ion-list-header>               
+      <ion-card *ngIf="commende.lignes">
+          <ion-row class="line header" no-padding><ion-col>Designation</ion-col><ion-col col-2>Qte</ion-col><ion-col col-4 text-right>Total</ion-col></ion-row>
+          <ion-item-sliding #slidingItem *ngFor="let ligne of commende.lignes; let i = index; ">
+              <ion-item #item>                
+                  <ion-icon [hidden]="!editing" item-start color="danger" name="remove-circle" (click)="openOption(slidingItem, item, $event)"></ion-icon>
+                  <ion-row class="line" no-padding><ion-col col-6>{{ligne.nom}}</ion-col><ion-col col-2>{{ligne.quantite}}</ion-col><ion-col col-4 text-right>{{ligne.total}}</ion-col></ion-row>                                  
+           </ion-item>
+           <ion-item-options icon-start (ionSwipe)="deleteItem(commende.lignes, i)" [hidden]="!canEdit()">
+              <button color="danger" (click)="deleteItem(commende.lignes, i)" ion-button icon-left expandable>
+                <ion-icon name="trash"></ion-icon> retirer
+              </button>
+      </ion-item-options>       
+        </ion-item-sliding>
+        </ion-card>
+  </ion-list> 
 </ion-content>
-<ion-footer>
-  <ion-row>
-    <ion-col col-3 align-self-start>    
-      <span> {{TotalQuantity()}} Stion</span>
-   </ion-col> 
-   <ion-col col-6>
+<ion-footer [hidden]="!canEdit()">
+    <button *ngIf="!commende.id" [hidden]="!edited||!(commende.lignes&&commende.lignes.length)" ion-button large full (click)="save()" icon-left >
+      <ion-icon name="save"  ></ion-icon>
+       Enregistrer 
+  </button> 
+<ion-row *ngIf="commende.id">
+  <ion-col>
+      <button  ion-button outline block (click)="delete()" color="danger" icon-left >
+          <ion-icon name="save"  ></ion-icon>
+           Annuler 
+      </button>    
   </ion-col>
-<ion-col col-3 align-self-end>
-    <span>{{TotalCash()}} XOF</span>
-  </ion-col> 
-</ion-row>
+  <ion-col [hidden]="commende.terminated">
+      <button  [hidden]="!edited||(!(commende.lignes&&commende.lignes.length)&&!commende.id)" ion-button  block (click)="save()" icon-left >
+          <ion-icon name="save"  ></ion-icon>
+           Enregistrer 
+      </button>   
+    <button [hidden]="edited"  ion-button block  (click)="terminate()" icon-left color="secondary" >
+      <ion-icon name="done-all"  ></ion-icon>
+      Terminer 
+  </button> 
+  </ion-col>
+</ion-row>   
 </ion-footer>
