--- a/src/pages/commendes/commendes.html
+++ b/src/pages/commendes/commendes.html
@@ -1,23 +1,47 @@
-<ion-header  no-border no-shadow>
+<ion-header>
   <ion-navbar>
-    <ion-title>Factures</ion-title>
+    <ion-title >Les ventes</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="loadRemoteData()">
         <ion-icon name="refresh"></ion-icon>
       </button>
-      <button ion-button icon-only (click)="presentPopover($event)">
-          <ion-icon name="more"></ion-icon>
-        </button>       
+      <button ion-button icon-left (click)="add()">
+        <ion-icon name="add"></ion-icon>
+        Nouveau
+      </button>
     </ion-buttons>    
   </ion-navbar>
 </ion-header>
-<ion-content padding>
-<ion-list>
-  <ion-item *ngFor="let commende of commendes" (click)="openCart(commende)">
-    {{commende.date|date:'dd/MM/yyyy' }}
-    <p>{{TotalQuantity(commende)}} souscriptions</p>
+<ion-content >
+  <div padding>
+    <ion-segment mode="ios" color="primary" [(ngModel)]="target" (ionChange)="search()">
+        <ion-segment-button value="today">
+          Aujourd'hui
+        </ion-segment-button>
+        <ion-segment-button value="thisweek">
+          Cette ce mois
+        </ion-segment-button>      
+        <ion-segment-button value="notended">
+          Non terminées
+        </ion-segment-button>
+    </ion-segment>
+  </div>
+  <ion-searchbar [hidden]="!commendes.length" color="primary" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
+    </ion-searchbar>  
+<ion-list *ngIf="commendes&&commendes.length">
+  <ion-item-sliding  *ngFor="let commende of commendes"  #slidingItem [hidden]="commende.deleted||commende.hide">
+  <ion-item (click)="openCart(commende)" text-wrap>
+    <strong>{{commende.pointVente.nom |uppercase}}</strong> -  {{commende.date|date:'dd/MM/yyyy' }}
+    <p> {{commende.pointVente.telephone}}<span *ngIf="commende.pointVente.quartier">,{{commende.pointVente.quartier}}</span></p>
+    <p> {{commende.pointVente.adresse}} </p>
   </ion-item>
-</ion-list>
+  <ion-item-options side="right" [hidden]="commende.terminated">    
+      <button ion-button color="danger" (click)="confirm(commende,slidingItem)">
+        <ion-icon name="trash"></ion-icon> supprimer
+      </button>          
+  </ion-item-options>        
+ </ion-item-sliding>  
+</ion-list>  
 <ion-fab right bottom>
   <button ion-fab color="primary" (click)="add()"><ion-icon name="add" ></ion-icon></button>
 </ion-fab>
