--- a/src/pages/selectclient/selectclient.html
+++ b/src/pages/selectclient/selectclient.html
@@ -1,18 +1,34 @@
 <!--
-  Generated template for the SelectclientPage page.
+  Generated template for the PointventesPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>selectclient</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-header  no-border no-shadow>
+    <ion-navbar>
+        <ion-buttons left>
+            <button ion-button   style="text-transform: none;" (click)="dismiss()" icon-left>
+                <ion-icon name="close" color="danger"></ion-icon>
+                Annuler
+            </button>           
+        </ion-buttons>       
+      <ion-title>Choisir un client</ion-title>
+      <ion-buttons end>
+          <button ion-button  outline (click)="add()" icon-left>
+              <ion-icon name="add" ></ion-icon>
+              Nouveau
+          </button>           
+      </ion-buttons>    
+    </ion-navbar>
+  </ion-header>
+  <ion-content>
+      <ion-searchbar *ngIf="pointventes" [hidden]="!pointventes.length" [(ngModel)]="queryText" (ionInput)="search()" placeholder="Recherchez un nom">
+        </ion-searchbar>     
+      <ion-list>
+          <ion-item #item *ngFor="let pointvente of pointventes"  [hidden]="pointvente.hide" (click)="dismiss(pointvente)">
+              {{pointvente.nom}}
+              <p><span>{{pointvente.telephone}}</span><span *ngIf="pointvente.ville">, {{pointvente.ville}}</span><span *ngIf="pointvente.quartier">, {{pointvente.quartier}}</span></p>
+          </ion-item>
+      </ion-list>
+  </ion-content>
+  
